examples/c/error-codes/violates-constraint/fatal/CV-TEAS3-bad-static.output
CV-TEAS3-bad-static.c:4:5: error: expression is not assignable
 42 = 42;
 ~~ ^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
